<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gurug.education.view.activity.ProfileEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="@dimen/dp_4"
        app:contentInsetEnd="@dimen/dp_0"
        app:contentInsetStart="@dimen/dp_0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/colorTransparent"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ib_back"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5">

                <TextView
                    android:id="@+id/tv_subject_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_regular"
                    android:text="Edit Profile"
                    android:textColor="@color/colorBlack1"
                    android:textSize="@dimen/_16sp" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/text_name"
            android:textColor="@color/colorBlack1"
            android:textSize="@dimen/_16sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_edit_text_round_corner"
            android:hint="@string/text_hint_enter_your_name"
            android:minHeight="@dimen/dp_40"
            android:padding="@dimen/dp_5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/text_qualification"
            android:textColor="@color/colorBlack1"
            android:textSize="@dimen/_16sp" />

        <EditText
            android:id="@+id/et_qualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_edit_text_round_corner"
            android:hint="@string/text_hint_enter_your_qualification"
            android:minHeight="@dimen/dp_40"
            android:padding="@dimen/dp_5" />


    </LinearLayout>

    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/btn_bg_selector"
        android:enabled="true"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_save"
        android:textAllCaps="true"
        android:textColor="@color/btn_text_selector" />


</LinearLayout>