<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gurug.education.view.activity.SelectBoardMediumActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_next"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/dp_35"
                android:fontFamily="@font/noto_sans_regular"
                android:gravity="center"
                android:text="@string/text_welcome"
                android:textColor="@color/colorBlack1"
                android:textSize="@dimen/_18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_100"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_select_framework"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_margin="@dimen/dp_15"
                    android:background="@drawable/bg_grey3_round"
                    android:orientation="horizontal"
                    android:textColor="@color/colorGrey1"
                    android:textSize="@dimen/_16sp">

                    <com.gurug.education.utill.views.ImageViewCircle
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_15"
                        android:src="@drawable/ic_missing"
                        android:visibility="gone" />


                    <TextView
                        android:id="@+id/tv_select_framework"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_right_arrow"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="start|center"
                        android:padding="@dimen/dp_15"
                        android:text="@string/text_select_board"
                        android:textColor="@color/colorGrey1"
                        android:textSize="@dimen/_16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_select_board"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_15"
                    android:background="@drawable/bg_grey3_round"
                    android:orientation="horizontal"
                    android:textColor="@color/colorGrey1"
                    android:textSize="@dimen/_16sp"
                    android:visibility="gone">

                    <com.gurug.education.utill.views.ImageViewCircle
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_15"
                        android:src="@drawable/ic_missing"
                        android:visibility="gone" />


                    <TextView
                        android:id="@+id/tv_select_board"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_right_arrow"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="start|center"
                        android:padding="@dimen/dp_5"
                        android:text="@string/text_select_board"
                        android:textColor="@color/colorGrey1"
                        android:textSize="@dimen/_16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_select_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_15"
                    android:background="@drawable/bg_grey3_round"
                    android:orientation="horizontal"
                    android:textColor="@color/colorGrey1"
                    android:textSize="@dimen/_16sp">

                    <com.gurug.education.utill.views.ImageViewCircle
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_15"
                        android:src="@drawable/ic_missing"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_select_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_grey3_round"
                        android:drawableEnd="@drawable/ic_right_arrow"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="start|center"
                        android:padding="@dimen/dp_15"
                        android:text="@string/text_select_medium"
                        android:textColor="@color/colorGrey1"
                        android:textSize="@dimen/_16sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_100"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginBottom="@dimen/dp_20"

        android:background="@color/cool_grey"
        android:minWidth="@dimen/dp_150"
        android:visibility="gone" />

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/btn_bg_selector"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_next"
        android:textAllCaps="true"
        android:textColor="@color/btn_text_selector" />
</RelativeLayout>
